--- a/DuOSU/firefox/DuOSU/welcome.html
+++ b/DuOSU/firefox/DuOSU/welcome.html
@@ -56,11 +56,12 @@
   <body>
     <!-- DuOSU logo -->
     <img id="logo" src="images/duo.png" class="expand" width="250">
-    <h3 id="splash">Thanks for Downloading!</h3>
+    <h3 id="splash">Welcome to DuOSU!</h3>
+
     <div id="tutorialDiv">
       <img id="tutorial" src="images/tutorial.gif" width="300px">
       <h3>Find DuOSU and flip through the instructions with the arrow keys.</h3>
-      <h3>Need help? Visit FAQs <a href="https://addons.mozilla.org/en-US/firefox/addon/duosu/">here</a>.</h3>
+      <h3><b>Can't find the Duo devices website?</b><br>Try googling your organization's name followed by "duo devices" to find it.</h3>
     </div>
   </body>
   <script src="welcome.js"></script>
